--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,17 @@
     		<artifactId>mybatis-spring-boot-starter</artifactId>
     		<version>2.2.2</version>
 		</dependency>
+		<dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1</version>
+        </dependency>
+		<dependency>
+		      <groupId>com.googlecode.json-simple</groupId>
+		      <artifactId>json-simple</artifactId>
+		      <version>1.1.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -46,8 +57,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
+			</plugin>		</plugins>
 	</build>
-
-</project>
+	</project>
