--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/smartmirror?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=1225
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://mirrordb.crmjteiy1yyb.ap-northeast-2.rds.amazonaws.com:3306/smartmirror?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
+spring.datasource.username=admin
+spring.datasource.password=kang1225
+server.port = 5000
